src/test/deca/context/valid/field_int_boolean.deca
/*
    Description : identifiant du nom boolean

    Résultat : OK
*/

class A{
    int boolean;
    boolean b = false;
}
