src/test/deca/context/invalid/return_inside_main.deca
/*
    Description : Instruction return dans le bloc main

    Résultat : Erreur contextuelle
*/
{
    int x = 1;
    return x;
}
